[helm] Expose to https://explorer.rddl.io
And tendermint RPC to https://explorer.rddl.io/rpc/.

Signed-off-by: Julian Strobl <jmastr@mailbox.org>

--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -42,6 +42,22 @@ spec:
       http:
         paths:
           {{- range .paths }}
+          {{- if eq .path "/rpc/" }}
+          - path: {{ .path }}
+            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
+            pathType: {{ .pathType }}
+            {{- end }}
+            backend:
+              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
+              service:
+                name: planetmint
+                port:
+                  number: 26657
+              {{- else }}
+              serviceName: planetmint
+              servicePort: 26657
+              {{- end }}
+          {{- else }}
           - path: {{ .path }}
             {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
             pathType: {{ .pathType }}
@@ -56,6 +72,7 @@ spec:
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
               {{- end }}
+          {{- end }}
           {{- end }}
     {{- end }}
 {{- end }}
