--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -41,20 +41,21 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  className: "haproxy"
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
   hosts:
-    - host: chart-example.local
+    - host: explorer.rddl.io
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+        - path: /rpc/
+          pathType: ImplementationSpecific
+  tls:
+    - secretName: explorer.rddl.io-tls
+      hosts:
+        - explorer.rddl.io
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
