--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 VUE_APP_RPC_URL=https://explorer.rddl.io/rpc/
-VUE_APP_RPC_WS_URL=ws://explorer.rddl.io/rpc/
+VUE_APP_RPC_WS_URL=wss://explorer.rddl.io/rpc/
 VUE_APP_NETWORK=RDDL-Testnet
