--- a/chart/templates/planetmint-deployment.yaml
+++ b/chart/templates/planetmint-deployment.yaml
@@ -3,14 +3,16 @@ kind: Deployment
 metadata:
   name: planetmint
   labels:
-    {{- include "tendermint-explorer.labels" . | nindent 4 }}
+    app.kubernetes.io/instance: rddl-explorer
+    app.kubernetes.io/name: planetmint
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "tendermint-explorer.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/instance: rddl-explorer
+      app.kubernetes.io/name: planetmint
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,7 +20,8 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "tendermint-explorer.selectorLabels" . | nindent 8 }}
+        app.kubernetes.io/instance: rddl-explorer
+        app.kubernetes.io/name: planetmint
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
