--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VUE_APP_RPC_URL=http://localhost:26657
 VUE_APP_RPC_WS_URL=ws://localhost:26657
+VUE_APP_RPC_PM_URL=http://localhost:9984
 VUE_APP_NETWORK=Testnet
