added CID link resolving and linking to the explorer
Signed-off-by: Jürgen Eckel <juergen@riddleandcode.com>

--- a/.env.prod
+++ b/.env.prod
@@ -2,3 +2,4 @@ VUE_APP_RPC_URL=https://testnet-rpc.rddl.io/
 VUE_APP_RPC_WS_URL=wss://testnet-rpc.rddl.io/
 VUE_APP_RPC_PM_URL=https://testnet-rpc.rddl.io/planetmint/
 VUE_APP_NETWORK=RDDL-Testnet
+VUE_APP_CID_RESOLVER_URL=https://cid-resolver.rddl.io
