--- a/.env.planetmint-aio
+++ b/.env.planetmint-aio
@@ -2,3 +2,4 @@ VUE_APP_RPC_URL=http://planetmint-aio:26657
 VUE_APP_RPC_WS_URL=ws://planetmint-aio:26657
 VUE_APP_RPC_PM_URL=http://planetmint-aio:9984
 VUE_APP_NETWORK=RDDL-Testnet
+VUE_APP_CID_RESOLVER_URL=https://cid-resolver.rddl.io
