--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -156,7 +156,7 @@ planetmint:
   rddl:
     config: |
       proxy_app = "tcp://127.0.0.1:26658"
-      moniker = "ip-172-31-4-27"
+      moniker = "RDDL-Explorer"
       fast_sync = true
       db_backend = "goleveldb"
       db_dir = "data"
