add checkbox to cid resolve page
Signed-off-by: Cybnon <stefan.weber93@googlemail.com>

--- a/.env.localhost
+++ b/.env.localhost
@@ -3,3 +3,4 @@ VUE_APP_RPC_WS_URL=ws://localhost:26657
 VUE_APP_RPC_PM_URL=http://localhost:9984
 VUE_APP_NETWORK=Testnet
 VUE_APP_CID_RESOLVER_URL=http://localhost:8000
+VUE_APP_VERIFIER_URL=https://verify.rddl.io
